Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
   </head>
   <body>
     <div class="wrapper">
-      <header class="without-description">
+      <header>
         <h1>Box-off</h1>
-        <p></p>
+        <p>Box-Off</p>
         <p class="view"><a href="https://github.com/FeynmanTech/Box-Off">View the Project on GitHub <small>FeynmanTech/Box-Off</small></a></p>
         <ul>
           <li><a href="https://github.com/FeynmanTech/Box-Off/zipball/master">Download <strong>ZIP File</strong></a></li>
